<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_product_management"
            android:icon="@drawable/clothes2"
            android:title="@string/header_product_management"
            android:tint="@android:color/white"
            />
        <item
            android:id="@+id/nav_order_management"
            android:icon="@drawable/order"
            android:title="@string/header_order_management"
            android:tint="@android:color/white"/>
        <item
            android:id="@+id/nav_user_management"
            android:icon="@drawable/user"
            android:title="@string/header_user_management"
            android:tint="@android:color/white"/>

        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/statistic_up"
            android:title="@string/header_statistic_year"
            android:tint="@android:color/white"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout_btn"
            android:tint="@android:color/white"/>

    </group>
</menu>