<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/order"
            android:title="@string/header_order_history"
            android:tint="@android:color/white"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/header_search_product"
            android:tint="@android:color/white"/>
<!--
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="Setting"
            android:tint="@android:color/white"/>
            -->

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout_btn"
            android:tint="@android:color/white"/>


    </group>
</menu>