<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity.ProductDetailsActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/header_detail_product"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back_arrow"
        app:tint="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/back_button"
        />

    <ImageButton
        android:id="@+id/cart_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/cart"
        app:tint="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/cart_button"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_text"
        android:layout_above="@id/number_btn"
        android:layout_marginBottom="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/dresses"
                android:contentDescription="@string/image_product"

                />

            <TextView
                android:id="@+id/product_name_detail"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView_detail"
                android:layout_marginHorizontal="20dp"
                android:text="@string/textview_name_product"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/product_price_detail"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name_detail"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/textview_price_product"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_description_detail"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_price_detail"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/textview_description_product"
                android:textStyle="bold" />
        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/product_number"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/add_to_cart_button"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/textview_quantity_product"
        />


    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/number_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_to_cart_button"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="#AD1457"
        android:elevation="6dp"
        app:finalNumber="10"
        app:initialNumber="1"
        app:textSize="15sp"
        tools:ignore="MissingClass" />

    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/btn_add_to_cart"
        android:textSize="18sp"
        android:background="@drawable/buttons"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

</RelativeLayout>