<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back_arrow"
        app:tint="@android:color/white"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/back_button"
        />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_user_name_input"
        android:background="@drawable/input_design"
        android:layout_below="@+id/app_logo"
        android:padding="20dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/editview_name_user"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="6dp"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_phone_number_input"
        android:background="@drawable/input_design"
        android:layout_below="@+id/register_user_name_input"
        android:padding="20dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/editview_phone_user"
        android:inputType="phone"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="6dp"
        android:textSize="15sp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_password_input"
        android:background="@drawable/input_design"
        android:layout_below="@+id/register_phone_number_input"
        android:padding="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/editview_password_user"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        android:imeOptions="actionDone"
        />


    <Button
        android:layout_below="@id/register_password_input"
        android:id="@+id/sign_up"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:textSize="18sp"
        android:text="@string/signup_btn"
        android:textColor="@android:color/white"

        />

</RelativeLayout>